# Jetson

./: README.md
CUDA/: README.md
CUDA/cuda-example/KTH-Course/ex-1/: cuda-kernel  ex-1  ex-1.cpp  kernel.cu
CUDA/cuda-example/KTH-Course/ex-2/: ex-2.cu
CUDA/cuda-example/KTH-Course/ex-3/: async.cu
CUDA/cuda-example/UM-example/: example  example.cu  test  um-example  um-test
CUDA/cuda-example/chapter-1/add-example/: CMakeLists.txt
CUDA/cuda-example/chapter-1/add-example/src/: add  add.cu
CUDA/cuda-example/chapter-1/cuda-test/: CMakeLists.txt  test.cu
CUDA/cuda-example/chapter-1/gpu-property/: CMakeLists.txt  gpu-test.cu  test
CUDA/cuda-example/chapter-1/set-gpu/: CMakeLists.txt  set-gpu.cu
CUDA/cuda-example/cuda-UM/: ex-1  ex-1.cu
CUDA/cuda-example/hello-cuda/: CMakeLists.txt
CUDA/cuda-samples/Samples/simpleD3D12/: ShaderStructs.h
CUDA/jetson-nano-test/: ex-2  ex-3  ex-3.cu  example-2.cu  example.cu  no-um-test  um-test
Config/Boot-from-SSD/: README.md  make_partitions.py  make_readonly.sh  overlayRoot.sh  sbts_install_boot_from_SSD.sh  setup_boot_sequence.pl
IMX219-83/: install_opencv4.1.1_Jetson.sh
IMX219-83/01-cvfirst/: CMakeLists.txt  cvfirst.cpp  readme.txt
IMX219-83/02-camera-display/: CMakeLists.txt  camera-display.cpp  readme.txt
IMX219-83/03-double-camera-display/: CMakeLists.txt  double-camera-display.cpp  readme.txt
IMX219-83/04-stereoBM/: CMakeLists.txt  readme.txt  stereoBM-file.cpp
IMX219-83/05-stereoBM-camera/: CMakeLists.txt  readme.txt  stereoBM-camera.cpp
IMX219-83/06-i2cfirst/: Makefile  main.c  readme.txt
IMX219-83/07-icm20948-demo/: ICM20948.c  ICM20948.h  Makefile  main.c  readme.txt
IMX219-83/08-recompile-opencv/: readme.txt
IMX219-83/09-save-calibration-images/: CMakeLists.txt  imagecapture_camera.cpp  readme.txt
IMX219-83/10-stereo-cameras-calibration/: CMakeLists.txt  readme.txt  stereo_calibration.cpp
IMX219-83/10-stereo-cameras-calibration/images/: stereo_calib.xml
IMX219-83/11-stereoSGBM/: CMakeLists.txt  readme.txt  stereoSGBM.cpp
IMX219-83/12-stereoBM-camera/: CMakeLists.txt  readme.txt  stereoBM_camera.cpp
IMX219-83/13-stereoSGBM-camera/: CMakeLists.txt  readme.txt  stereoSGBM_camera.cpp
IMX219-83/14-stereoBM-gpu/: CMakeLists.txt  readme.txt  stereoBM_gpu.cpp
IMX219-83/15-stereoBM-gpu-camera/: CMakeLists.txt  readme.txt  stereoBM_gpu_camera.cpp
IMX219-83/15-stereoBM-gpu-camera/cal_results/11 pairs/: extrinsics.yml  intrinsics.yml
IMX219-83/16-save-stereo-camera-video/: CMakeLists.txt  readme.txt  videocapture_camera.cpp
IMX219-83/17-stereoBM-detectBoard-gpu/: CMakeLists.txt  readme.txt  stereoBM_gpu.cpp
Jetson-nano/D435-test/capture/: CMakeLists.txt  main.cpp
Jetson-nano/D435-test/hello-realsense/: CMakeLists.txt  main.cpp
Jetson-nano/D435-test/motion-tracking/: main.py
Jetson-nano/Documents/: http___developer.nvidia.com_embedded_dlc_tegra-x1-technical-reference-manual
Jetson-nano/Multi-Camera/Pi-HQ-D435/cpp/: CMakeLists.txt
Jetson-nano/Multi-Camera/Pi-HQ-D435/python/: motion-tracking.py
Jetson-nano/Pi-camera-HQ/capture-image/: main.py
Jetson-nano/Pi-camera-HQ/gstreamer-opencv-test/: main.cpp  main.py
Jetson-nano/Pi-camera-HQ/harris-cuda/: CMakeLists.txt
Jetson-nano/Pi-camera-HQ/harris-cuda/include/: test_base.h  test_harris.h
Jetson-nano/Pi-camera-HQ/harris-cuda/src/: arguments.cpp  main.cpp  test_base.cpp  test_harris.cpp  transformations.cpp
Jetson-nano/Pi-camera-HQ/motion-tracking/: test.py
Jetson-nano/Pi-camera-HQ/my-recognition/: CMakeLists.txt  REAME.md
Jetson-nano/Pi-camera-HQ/test-opencv/: CMakeLists.txt
Jetson-nano/gstreamer-opencv-test/: CMakeLists.txt  main.py
Jetson-nano/motion-tracking/: main.py  test.py
Jetson-nano/my-recognition/: CMakeCache.txt  Makefile  cmake_install.cmake  my-recognition  my-recognition.cpp
MachineLearning/YOLOv5-LibTorch/: CMakeLists.txt  README.md
TX2/vilib/visual_lib/test/: CMakeLists.txt  image_list_640_480.txt  image_list_752_480.txt
TX2/vilib/visual_lib/test/src/: test_base.cpp  tests.cpp
TX2/vilib/visual_lib/test/src/preprocess/: test_pyramid.cpp
TX2/vilib/visual_lib/test/src/storage/: test_pyramidpool.cpp
VPI/Harris/: CMakeLists.txt  main.cpp
VPI/HelloWorld/: CMakeLists.txt  main.cpp
VPI/KLTBBoxTracker/: main.cpp
VPI/PyramidalLKOpticalFlow/: CMakeLists.txt  main.cpp
